# xunfeispark

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.jihulab/: PULL_REQUEST_TEMPLATE.md
.jihulab/ISSUE_TEMPLATE/: bug_report.md
docs/: index.md
src/pysparkai.egg-info/: PKG-INFO  SOURCES.txt
src/sparkai/: __init__.py  auth_websocket_client.py  sparkai.py
src/sparkai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xunfeispark.egg-info/: PKG-INFO  SOURCES.txt
src/xunfeisparkai.egg-info/: PKG-INFO  SOURCES.txt
